[tool.poetry]
name = "zipy"
version = "0.1.0"
description = "Zipy is a toolbox containing a set of convenient python function"
authors = ["冒险岛真好玩 <17826800084g@gmail.com>"]
readme = "README.md"
packages = [{include = "zipy_toolbox"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
pytest = {extras = ["dotenv"], version = "^7.2.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
